# F9070W

./: .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
.claude/plans/: F9070W-1-full-reverse.md  F9070W-1.segments.json
.claude/skills/build-theme/: SKILL.md
.claude/skills/reverse-format/: SKILL.md
.claude/skills/unpack-firmware/: SKILL.md
.claude/skills/verify-roundtrip/: SKILL.md
docs/: config-keys.md  findings.md  hardware.md  roadmap.md
docs/formats/: datav1.md  imagewty.md  melis-lzma.md  minfs.md
formats/: datav1.py  imagewty.py  melislzma.py  minfs.py
tests/: conftest.py  test_build.py  test_config_ini.py  test_datav1.py  test_imagewty.py  test_melislzma.py  test_minfs.py  test_patchfile.py
tests/fixtures/: Config.ini  black.data  png.sha256  setuplogo.data  setupversion.data  sprites.json  tipbox.data  volumebar.data  wallpaper.data
themes/config/: Config.ini
tools/: build.py  mkfixtures.py  patchfile.py  unpack.py  verify.py
